--- a/vite-vanilla-project/package.json
+++ b/vite-vanilla-project/package.json
@@ -10,6 +10,8 @@
     "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@vanilla-extract/vite-plugin": "^3.7.0",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "gh-pages": "^4.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
